# Platinum-Pedigree-Inheritance

./: .gitignore  README.md
analyses/: Concordance.md  Denovo.md  StructuralVariant.md  hcr_regions.md
code/inheritance_vectors/: prepare_snps.py  prepare_snps.single_parent.py  viterbi.py  viterbi_to_inht_vectors.py
code/python/: README.md
code/python/src/: interval_tree_merge.py  strip_vcf.json  strip_vcf.py  strip_vcf_test.py  util.py
code/rust/: Cargo.toml  README.md
data/: CEPH1463.ped
pipelines/inheritance-vectors/: README.md  inhHMM.single_parent.smk  inhHMM.smk
pipelines/inheritance-vectors/data/: CEPH1463.inht_vectors.ped  CEPH1463.inht_vectors.updated.ped  e_matrix.txt  t_matrix.txt
pipelines/inheritance-vectors/envs/: coreutils.yaml  gnugrep.yaml  inht_vectors.yaml  pandas.yaml  snakemake.yaml  vcfpy.yaml
pipelines/smallvar-filtering/: README.md  config.json  inheritance_filtering.sn  modules.sh
pipelines/sv/: config.json  process.sn
pipelines/tandem-repeats/: .gitignore  analyze_trs.ipynb  plot_karyoplot.R
pipelines/tandem-repeats/helpers/: allele_db.py  consistency.py  vcf.py
