[package]
name = "concordance"
version = "0.1.0"
authors = [ "Zev Kronenberg <zkronenberg@pacificbiosciences.com>"]
description = "Filter and report variant counts"
edition = "2021"

[[bin]]
name = "concordance"
path = "src/bin/concordance.rs"

[[bin]]
name = "mash2vcf"
path = "src/bin/mash2vcf.rs"

[[bin]]
name = "denovo"
path = "src/bin/denovo.rs"

[[bin]]
name = "resolver"
path = "src/bin/grapher.rs"

[[bin]]
name = "ovlfilter"
path = "src/bin/overlap2keepers.rs"

[[bin]]
name = "anno"
path = "src/bin/annotateOvl.rs"

[[bin]]
name = "asmprefix"
path = "src/bin/asm_prefixer.rs"

[[bin]]
name = "ihtstats"
path = "src/bin/vector_analysis.rs"

[dependencies]
clap = { version = "*", features = ["derive"] }
slurp = "1.0.1"
csv = "1.1"
rust-htslib = { version = "0.44.1", default-features = false }
edit-distance = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.20"
env_logger = "0.10.1"
